<resources>
    <string name="app_name">Story App</string>
    <string name="story">Story</string>
    <string name="app">App</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="please_wait">Please Wait</string>
    <string name="add_story">Add Story</string>
    <string name="settings">Settings</string>
    <string name="story_app">Story App</string>
    <string name="change_language">Change Language</string>
    <string name="logout">Logout</string>
    <string name="name_item">Name</string>
    <string name="description">Description</string>
    <string name="updated_at">Updated At, </string>
    <string name="longitude">Longitude</string>
    <string name="latitude">Latitude</string>
    <string name="jam">Jam</string>
    <string name="location">Lokasi Tidak dikenali</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="upload">Upload</string>
    <string name="capture_camera">Capture Camera</string>
    <string name="capturing">Capturing</string>
    <string name="rotate_camera">Rotate Camera</string>
    <string name="image_back">Image Back</string>
    <string name="camera_gagal">Gagal Menampilkan Kamera</string>
    <string name="permission_denied">Permissions Denied</string>
    <string name="choose_picture">Choose Picture</string>
    <string name="empty_picture">Picture is Empty</string>
    <string name="field_error">Please Field Your Name, Email and Password</string>
    <string name="appwidget_text">STORY APP</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>
    <string name="widget">Widget</string>
    <string name="empty_text">NO DATA</string>
    <string name="widget_image">Widget Image</string>
    <string name="auth">Bearer %1$s</string>
    <string name="image_detail">Image Detail</string>
    <string name="date_detail">Date Detail</string>
    <string name="location_detail">Location Detail</string>
    <string name="add_story_icon">Add Story Image</string>
    <string name="settings_icon">Settings Icon</string>
    <string name="image_preview">Image Preview</string>
    <string name="image_item">Image Item</string>
    <string name="error_image">Error Image</string>
    <string name="image_loading">Image Loading</string>
    <string name="invalid_email">Invalid Email Format</string>
    <string name="invalid_password">At Least 6 Characters</string>
    <string name="retry">Retry</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="show_map">Show Map</string>
    <string name="add_location">Add Location</string>
    <string name="location_add">Location</string>
    <string name="location_error">Location Not Found</string>
    <string name="load">Load</string>
</resources>