<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.auth.RegisterActivity">

    <TextView
        android:id="@+id/story_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/poppins_bold"
        android:gravity="center"
        android:text="@string/story"
        android:textSize="30sp"
        android:transitionName="storyText"
        android:layout_marginTop="40dp"
        app:layout_constraintBottom_toTopOf="@id/edit_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/app_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/poppins_bold"
        android:gravity="center"
        android:text="@string/app"
        android:textSize="40sp"
        android:transitionName="appText"
        android:textColor="#7E6F6F"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="@+id/story_text"
        app:layout_constraintStart_toStartOf="@+id/story_text"
        app:layout_constraintTop_toTopOf="@id/story_text" />

    <com.elthobhy.storyapp.ui.customview.EditText
        android:id="@+id/edit_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:hint="@string/name"
        android:textColorHint="@android:color/darker_gray"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_text"/>

    <com.elthobhy.storyapp.ui.customview.EditText
        android:id="@+id/edit_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="32dp"
        android:hint="@string/email"
        android:textColorHint="@android:color/darker_gray"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_name"
        custom:email="true"/>
    <com.elthobhy.storyapp.ui.customview.EditText
        android:id="@+id/edit_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColorHint="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_email"
        custom:password="true"/>

    <com.elthobhy.storyapp.ui.customview.Button
        android:id="@+id/button_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:textAllCaps="false"
        android:text="@string/register"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/edit_password"
        app:layout_constraintTop_toBottomOf="@+id/edit_password"/>

</androidx.constraintlayout.widget.ConstraintLayout>