<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.camera.CameraActivity">

    <androidx.camera.view.PreviewView
        android:id="@+id/camera_screen"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="0dp"
        android:layout_height="0dp"/>
    <ImageView
        android:id="@+id/image_capture"
        android:src="@drawable/ic_baseline_camera_24"
        android:clickable="true"
        android:focusable="true"
        android:contentDescription="@string/capture_camera"
        android:layout_marginBottom="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="64dp"
        android:layout_height="64dp"/>

    <TextView
        android:id="@+id/tv_capturing"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/poppins_light"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:visibility="gone"
        android:text="@string/capturing"
        app:layout_constraintBottom_toTopOf="@id/image_capture"
        app:layout_constraintEnd_toEndOf="@id/image_capture"
        app:layout_constraintStart_toStartOf="@id/image_capture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <ImageView
        android:id="@+id/image_rotate_camera"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="16dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:clickable="true"
        android:focusable="true"
        android:contentDescription="@string/rotate_camera"
        android:src="@drawable/ic_baseline_camera_switch_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="32dp"
        android:layout_height="32dp"/>

    <ImageView
        android:id="@+id/img_back_camera"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="48dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:clickable="true"
        android:contentDescription="@string/image_back"
        android:focusable="true"
        android:src="@drawable/ic_baseline_arrow_back_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>