<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.posting.PostStoryActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:elevation="2dp"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"/>
        <ImageView
            android:id="@+id/posting_image"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:contentDescription="@string/image_preview"
            app:layout_constraintBottom_toTopOf="@+id/button_camera_add"
            android:src="@drawable/ic_baseline_image_24"
            android:layout_width="300dp"
            android:layout_height="300dp"/>

        <com.elthobhy.storyapp.ui.customview.Button
            android:id="@+id/button_camera_add"
            app:layout_constraintTop_toBottomOf="@id/posting_image"
            app:layout_constraintStart_toStartOf="@id/posting_image"
            app:layout_constraintHorizontal_bias="0.5"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toStartOf="@id/button_gallery_add"
            android:layout_width="0dp"
            android:textAllCaps="false"
            android:layout_marginEnd="10dp"
            android:text="@string/camera"
            android:textColor="@color/white"
            android:layout_height="wrap_content"/>
        <com.elthobhy.storyapp.ui.customview.Button
            android:id="@+id/button_gallery_add"
            app:layout_constraintStart_toEndOf="@id/button_camera_add"
            app:layout_constraintTop_toBottomOf="@id/posting_image"
            app:layout_constraintEnd_toEndOf="@id/posting_image"
            app:layout_constraintHorizontal_bias="0.5"
            android:layout_marginTop="16dp"
            android:text="@string/gallery"
            android:textAllCaps="false"
            android:layout_marginStart="10dp"
            android:textColor="@color/white"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>

        <com.elthobhy.storyapp.ui.customview.EditText
            android:id="@+id/edit_description"
            app:layout_constraintTop_toBottomOf="@id/button_camera_add"
            app:layout_constraintStart_toStartOf="@id/posting_image"
            app:layout_constraintEnd_toEndOf="@id/posting_image"
            android:layout_margin="20dp"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:textColor="@color/black"
            android:textColorHint="@android:color/darker_gray"
            android:hint="@string/description"
            android:inputType="textMultiLine"
            custom:state_multiline="true"
            />
        <com.elthobhy.storyapp.ui.customview.Button
            android:id="@+id/button_upload"
            app:layout_constraintTop_toTopOf="@id/il_location"
            app:layout_constraintStart_toStartOf="@id/posting_image"
            app:layout_constraintEnd_toStartOf="@id/il_location"
            app:layout_constraintBottom_toBottomOf="@id/il_location"
            android:textAllCaps="false"
            android:text="@string/upload"
            android:textColor="@color/white"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            />
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/il_location"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="50dp"
            android:layout_marginStart="10dp"
            android:hint="@string/location_add"
            android:enabled="false"
            app:boxCornerRadiusBottomEnd="16dp"
            app:boxCornerRadiusBottomStart="16dp"
            app:boxCornerRadiusTopEnd="16dp"
            app:boxCornerRadiusTopStart="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_description"
            app:layout_constraintStart_toEndOf="@+id/button_upload">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_location"
                android:layout_width="match_parent"
                android:backgroundTint="#F3EFEF"
                android:layout_height="match_parent"
                android:fontFamily="@font/poppins_light"
                android:enabled="false"/>
        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:id="@+id/ic_search_location"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="16dp"
            android:theme="@style/IconColor"
            android:src="@drawable/ic_baseline_add_location_alt_24"
            app:layout_constraintBottom_toBottomOf="@+id/il_location"
            app:layout_constraintStart_toEndOf="@+id/il_location"
            app:layout_constraintTop_toTopOf="@+id/il_location"
            app:layout_constraintEnd_toEndOf="@id/posting_image"
            android:contentDescription="@string/add_location" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>