<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail.DetailActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"/>
        <ImageView
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/image_detail"
            android:scaleType="center"
            android:transitionName="imageDetail"
            android:layout_width="match_parent"
            tools:src="@tools:sample/avatars"
            android:layout_height="wrap_content"/>
        <TextView
            app:layout_constraintTop_toBottomOf="@id/image_detail"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/tv_name"
            android:textSize="18sp"
            android:transitionName="nameDetail"
            android:text="@string/name"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/poppins_bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <ImageView
            app:layout_constraintTop_toBottomOf="@id/tv_name"
            app:layout_constraintStart_toStartOf="@id/tv_name"
            app:layout_constraintBottom_toTopOf="@id/icon_location"
            android:src="@drawable/ic_baseline_calendar_month_24"
            android:id="@+id/icon_date"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:theme="@style/IconColor"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/create_at"
            app:layout_constraintTop_toTopOf="@+id/icon_date"
            app:layout_constraintBottom_toBottomOf="@id/icon_date"
            app:layout_constraintStart_toEndOf="@id/icon_date"
            android:text="@string/updated_at"
            android:textSize="12sp"
            android:layout_marginStart="10dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:textColor="@android:color/darker_gray"
            android:fontFamily="@font/poppins_light"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/tv_location"
            app:layout_constraintTop_toTopOf="@id/icon_location"
            app:layout_constraintBottom_toBottomOf="@id/icon_location"
            app:layout_constraintStart_toEndOf="@id/icon_location"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/longitude"
            android:textSize="12sp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/poppins_light"
            android:textColor="@android:color/darker_gray"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
        <ImageView
            android:id="@+id/icon_location"
            app:layout_constraintTop_toBottomOf="@id/icon_date"
            app:layout_constraintStart_toStartOf="@id/icon_date"
            app:layout_constraintBottom_toTopOf="@id/tv_description"
            android:src="@drawable/ic_baseline_location_on_24"
            android:layout_width="wrap_content"
            android:theme="@style/IconColor"
            android:layout_marginTop="8dp"
            android:paddingBottom="5dp"
            android:layout_height="0dp"/>
        <TextView
            app:layout_constraintTop_toBottomOf="@id/tv_location"
            app:layout_constraintStart_toStartOf="@id/tv_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="16dp"
            android:id="@+id/tv_description"
            android:transitionName="descriptionDetail"
            android:textSize="14sp"
            android:layout_marginEnd="10dp"
            android:text="@string/description"
            android:fontFamily="@font/poppins_light"
            android:layout_width="0dp"
            android:layout_height="match_parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>